--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,8 +182,36 @@
      "text": [
       "Last opentime in CSV: 1736325000000\n",
       "CSV length before appending: 354\n",
-      "Rounded timestamp (previous 30 minutes) in ms: 1736325000000\n",
-      "No new data available. The current timestamp is not greater than the last opentime.\n"
+      "Rounded timestamp (previous 30 minutes) in ms: 1736389800000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached endtime at 2025-01-09 00:01:00. Stopping fetch.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  5.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31 new rows fetched and appended successfully.\n",
+      "New CSV length after appending: 385\n"
      ]
     }
    ],
@@ -201,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'NaN' from 'numpy' (/home/ubuntu/Rheza/.venv/lib/python3.12/site-packages/numpy/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moverlap\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hl2\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvolatility\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m atr\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_offset, verify_series\n",
+      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/__init__.py:116\u001b[0m\n\u001b[1;32m     97\u001b[0m EXCHANGE_TZ \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNZSX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m12\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mASX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m11\u001b[39m,\n\u001b[1;32m     99\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTSE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m9\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHKE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m8\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSSE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m8\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSGX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m8\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBMF\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNYSE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m4\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTSX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m4\u001b[39m\n\u001b[1;32m    103\u001b[0m }\n\u001b[1;32m    105\u001b[0m RATE \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDAYS_PER_MONTH\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m21\u001b[39m,\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMINUTES_PER_HOUR\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m60\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    113\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYEARLY\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m    114\u001b[0m }\n\u001b[0;32m--> 116\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/core.py:18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcandles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcycles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmomentum\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moverlap\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mperformance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/momentum/__init__.py:34\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msmi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m smi\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msqueeze\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m squeeze\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msqueeze_pro\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m squeeze_pro\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stc\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstoch\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stoch\n",
+      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/momentum/squeeze_pro.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NaN \u001b[38;5;28;01mas\u001b[39;00m npNaN\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataFrame\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmomentum\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mom\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'NaN' from 'numpy' (/home/ubuntu/Rheza/.venv/lib/python3.12/site-packages/numpy/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1242,17 +1286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import hmac\n",
     "import hashlib\n",
-    "import requests\n",
     "import urllib.parse\n",
-    "import logging\n",
-    "from typing import List\n",
+    "import hmac\n",
     "\n",
     "class BinanceAPI:\n",
     "    def __init__(self, api_key: str, api_secret: str, testnet: bool = False):\n",
@@ -1303,13 +1343,17 @@
     "            logging.error(f\"API request failed: {e}\")\n",
     "            return None\n",
     "\n",
-    "    def set_leverage(self, symbol: str, leverage: int) -> dict:\n",
-    "        \"\"\"Set leverage for a symbol\"\"\"\n",
-    "        params = {\n",
-    "            \"symbol\": symbol,\n",
-    "            \"leverage\": leverage,\n",
-    "        }\n",
-    "        return self._send_request(\"POST\", \"/fapi/v1/leverage\", params, signed=True)\n",
+    "    def get_mark_price(self, symbol: str) -> dict:\n",
+    "        \"\"\"Get mark price for symbol\"\"\"\n",
+    "        params = {\"symbol\": symbol}\n",
+    "        return self._send_request(\"GET\", \"/fapi/v1/premiumIndex\", params)\n",
+    "\n",
+    "    def get_position_risk(self, symbol: str = None) -> dict:\n",
+    "        \"\"\"Get position information\"\"\"\n",
+    "        params = {}\n",
+    "        if symbol:\n",
+    "            params[\"symbol\"] = symbol\n",
+    "        return self._send_request(\"GET\", \"/fapi/v3/positionRisk\", params, signed=True)\n",
     "\n",
     "    def create_order(\n",
     "        self,\n",
@@ -1319,12 +1363,8 @@
     "        quantity: float,\n",
     "        price: float = None,\n",
     "        reduce_only: bool = False,\n",
-    "        leverage: int = 1,  # Leverage parameter added\n",
     "    ) -> dict:\n",
-    "        \"\"\"Create a new order with leverage\"\"\"\n",
-    "        # Set leverage before placing the order\n",
-    "        self.set_leverage(symbol, leverage)\n",
-    "\n",
+    "        \"\"\"Create a new order\"\"\"\n",
     "        params = {\n",
     "            \"symbol\": symbol,\n",
     "            \"side\": side,\n",
@@ -1336,26 +1376,7 @@
     "        if price:\n",
     "            params[\"price\"] = price\n",
     "\n",
-    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
-    "\n",
-    "    def close_all_positions(self, symbol: str) -> dict:\n",
-    "        \"\"\"Close all positions for a symbol\"\"\"\n",
-    "        params = {\n",
-    "            \"symbol\": symbol,\n",
-    "        }\n",
-    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
-    "\n",
-    "    def get_mark_price(self, symbol: str) -> dict:\n",
-    "        \"\"\"Get mark price for symbol\"\"\"\n",
-    "        params = {\"symbol\": symbol}\n",
-    "        return self._send_request(\"GET\", \"/fapi/v1/premiumIndex\", params)\n",
-    "\n",
-    "    def get_position_risk(self, symbol: str = None) -> List[dict]:\n",
-    "        \"\"\"Get position information\"\"\"\n",
-    "        params = {}\n",
-    "        if symbol:\n",
-    "            params[\"symbol\"] = symbol\n",
-    "        return self._send_request(\"GET\", \"/fapi/v3/positionRisk\", params, signed=True)"
+    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)"
    ]
   },
   {
@@ -1382,7 +1403,7 @@
     "# Open a long position with leverage\n",
     "symbol = \"SOLUSDT\"\n",
     "order_type = \"MARKET\"  # Market order\n",
-    "quantity = 1000  # Quantity to buy\n",
+    "quantity = 150  # Quantity to buy\n",
     "leverage = 1  # Set leverage to 1\n",
     "\n",
     "# Set leverage before opening the position (you need to implement this method in your BinanceAPI class)\n",
@@ -1390,61 +1411,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 101,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:API request failed: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v1/leverage?symbol=SOLUSDT&leverage=1&timestamp=1736320725726&signature=4b0d39d39182b10b4b0b18c1e853c6755281242c29727a8ed7d13a388d88ac8e\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:API request failed: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v1/order?symbol=SOLUSDT&side=SELL&type=MARKET&quantity=1000&reduceOnly=False&timestamp=1736320725826&signature=03f86f40540521e7c8a88ee788025f3871b25fc0085d4f579d81934c20812663\n",
-      "ERROR:root:API request failed: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v1/leverage?symbol=SOLUSDT&leverage=1&timestamp=1736320725925&signature=4e01c60e2616c3553b096b5b9aa12566c0408f79fb4f72035d2a6dd9ec046b8c\n",
-      "ERROR:root:API request failed: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v1/order?symbol=SOLUSDT&side=BUY&type=MARKET&quantity=1000&reduceOnly=False&timestamp=1736320726024&signature=c002cd0b60fc227c202e4516b760c9bfa26d76229556a29b9f2679bdd7f4fc99\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Short Order Response: None\n",
-      "Long Order Response: None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:API request failed: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v1/order?symbol=SOLUSDT&timestamp=1736320726121&signature=26c54f5f508ce910b83c79634e3b0e3e8ac879b642c24e2e0e12a368001dfa69\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Close Position Response: None\n"
-     ]
-    }
-   ],
    "source": [
-    "# Open Short Position (with leverage)\n",
-    "open_short = binance_api.create_order(symbol=symbol, side=\"SELL\", order_type=order_type, quantity=quantity, leverage=leverage)\n",
-    "print(f\"Short Order Response: {open_short}\")\n",
-    "\n",
-    "# Open Long Position (with leverage)\n",
-    "open_long = binance_api.create_order(symbol=symbol, side=\"BUY\", order_type=order_type, quantity=quantity, leverage=leverage)\n",
-    "print(f\"Long Order Response: {open_long}\")\n",
-    "\n",
-    "# Close all Positions (implement this method in your BinanceAPI class)\n",
-    "close_order = binance_api.close_all_positions(symbol)\n",
-    "print(f\"Close Position Response: {close_order}\")"
+    "{\n",
+    "    \"api_key\": \"YOUR_BINANCE_API_KEY\",\n",
+    "    \"api_secret\": \"YOUR_BINANCE_API_SECRET\",\n",
+    "    \"trade_amount_usdt\": 5,\n",
+    "    \"leverage\": 1,\n",
+    "    \"testnet\": false,\n",
+    "    \"symbols\": \"SOLUSDT\"\n",
+    "}"
    ]
   },
   {
